
[package]
name = "parity-wasm-fuzz"
version = "0.0.1"
authors = ["Pat Hickey phickey@fastly.com"]
publish = false
edition = "2021"
rust-version = "1.56.1"

[package.metadata]
cargo-fuzz = true

[dependencies.binaryen]
version = "0.10.0"

[dependencies.parity-wasm]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[dependencies.mktemp]
version = "0.3.1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "deserialize"
path = "fuzz_targets/deserialize.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_targets/fuzz_1.rs"
test = false
doc = false
